# SEO-Analysis-MCP

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
src/: analysis.js  server.js
src/seo_gsc_mcp/: __init__.py  analysis.py  server.py
tests/: analysis.test.js  test_analysis.py
