[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-gsc-mcp"
version = "0.1.0"
description = "MCP server for SEO analysis using Google Search Console data"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SEO Analysis MCP" }
]
dependencies = [
  "mcp>=1.2.0",
  "pandas>=2.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
